# pymc-bilby

./: CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/pymc_bilby/: __init__.py  sampler.py
tests/: conftest.py  test_bilby_integration.py  test_sampler_class.py
